--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <!-- Footer -->
     <footer class="copyright">
-        &copy; 2025 <a href="https://github.com/Omri-Shavit/" target="_blank">
+        &copy; 2025 <a href="https://github.com/Omri-Shavit/convex_angle_01_terrain_gadget" target="_blank">
             Omri Shavit
         </a>
     </footer>
